--- a/views/index.ejs
+++ b/views/index.ejs
@@ -371,7 +371,7 @@
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; 2022 Gabriele Bellini &middot; <a href="/Privacy">Privacy</a> &middot; <a href="/Terms">Terms</a></p>
     </footer>
-    <iframe id="iframe" src="" width="320" height="180" style="border:1px solid black; position:fixed; right:0; bottom: 0;display: none"></iframe>
+    <iframe id="iframe" title="Immagini recenti o in diretta" src="" width="320" height="180" style="border:1px solid black; position:fixed; right:0; bottom: 0;display: none"></iframe>
 
 
     <!-- SCRIPT -->
