--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,13 +90,13 @@
           <div class="col-lg-4">
             <img id="img_1" class="card-img-top" alt="Card image cap" style="max-height: 180px; width: auto">
             <h2 id="h2_name1">Heading</h2>
-            <p>Cerca in ogni posto del mondo, a qualsiasi ora del giorno senza limiti</p>
+            <p>Cerca in ogni posto del mondo, a qualsiasi ora del giorno, senza limiti</p>
             <p><a id="a_url1" class="btn btn-secondary" href="#">Vai al meteo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img id="img_2" class="card-img-top" alt="Card image cap" style="max-height: 180px; width: auto">
             <h2 id="h2_name2">Heading</h2>
-            <p>nessun posto è troppo lontano, lasciati guidare dalla tua immaginazione</p>
+            <p>Nessun posto è troppo lontano, lasciati guidare dalla tua immaginazione</p>
             <p><a id="a_url2" class="btn btn-secondary" href="#">Vai al meteo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
