--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
     <meta name="author" content="Gabriele Bellini">
 
     <title>Meteo <%= city%> <%= country%></title>
+    <link rel="icon" type="image/png" sizes="100x100" href="favicon.ico">
+    <!--<link rel="icon" type="image/png" href="/favicon.ico">-->
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/carousel/">
     <!-- Bootstrap core CSS -->
