--- a/public/AdvTableCentering.css
+++ b/public/AdvTableCentering.css
@@ -1,11 +1,3 @@
-html, body {
-    padding: 0;
-    margin:0;     /* This is used to reset any browser-default margins */
-    height:100vh; /* This is needed to overcome a Chrome bug. */
-    width:100vw;
-    max-width: 100%;
-    overflow-x: hidden;
-}
 
 table{margin-top: 25px;}
 table.B, table.C, table.D, table.E{ display: none; }
@@ -27,20 +19,7 @@ img.ring{
   display:block;
   position: relative;
 }
-footer{
-    width: 85%;
-    /*margin-top: 930px;
-    margin-bottom: 500px;*/
-    padding-top: 2cm;
-    padding-bottom: 1.4cm;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-footer p{
-    padding-top: 2cm;
-    border-top: 1px solid rgba(0,0,0,0.15);
-}
+
 @media (min-width:992px){
     div.content{
         width: calc(100% - 200px)
@@ -75,4 +54,8 @@ footer p{
     div.right-advertising{
         display: none;
     }
+}
+
+div.advertising-box:hover, div.right-advertising:hover{
+    border: 10px solid gray;
 }
