--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,7 +105,7 @@
             <img id="img_3" class="card-img-top" alt="Card image cap">
             <div class="card-body">
               <h2 id="h2_name3">Heading</h2>
-              <p>Esplora, viaggia e pianivica ogni tuo spostamento con il nostro sito di meteo</p>
+              <p>Esplora, viaggia e pianifica ogni tuo spostamento con il nostro sito di meteo</p>
               <p><a id="a_url3" class="btn btn-secondary" href="#">Vai al meteo &raquo;</a></p>
             </div>
           </div><!-- /.col-lg-4 -->
