--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/carousel/">
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link id="linkBootstrapStyle" href="" rel="stylesheet" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
     <!-- IL MIO FILE CSS -->
@@ -25,7 +25,7 @@
 
   <body ><!--style="overflow: auto"-->
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <nav class="navbar navbar-expand-md navbar-dark bg-custome fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">BrandMeteo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,15 @@
                 <a class="nav-link" href="/Archiv">Archivio documenti</a><!-- naviga libero nella cartella dock-->
               </li>
             </ul>
-            <div id="selectNation" class="d-flex"></div><!-- https://www.w3schools.com/tags/att_select_form.asp -->
+            <div class="spaceNavElem d-flex">
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="darkWiteSwitch" name="darkWiteMode" value="off" onclick="BlackWhite()">
+                <label class="form-check-label" for="darkWiteSwitch">Dark Mode</label>
+              </div><!--lo script va messo subito dopo il bottone così che prima di 
+              loadare tutti gli altri elementi si possa già determinare quale sia il tempa da dover settare così da non dover caricare e printare tutto di un colore e magari poi doverlo riprintare-->
+              <script src="./DarkModeScript.js"></script>
+            </div>
+            <div id="selectNation" class="spaceNavElem d-flex"></div><!-- https://www.w3schools.com/tags/att_select_form.asp -->
             <script>
               fetch("./selectNationCode.html")
               .then(response => {
