--- a/views/index.ejs
+++ b/views/index.ejs
@@ -126,47 +126,47 @@
         <div class="content">
             <div class="advertising-box"></div>
             <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" onclick="showTable(0)" checked>
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" onclick="showTable(0)" checked>
                 <label class="btn btn-outline-dark btn-outline-secondary" for="btnradio1">Oggi</label>
             
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" onclick="showTable(1)">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" onclick="showTable(1)">
                 <label id="labelDay1" class="btn btn-outline-dark btn-outline-secondary" for="btnradio2"></label>
             
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off" onclick="showTable(2)">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" onclick="showTable(2)">
                 <label id="labelDay2" class="btn btn-outline-dark btn-outline-secondary" for="btnradio3"></label>
             
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" autocomplete="off" onclick="showTable(3)">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio4" onclick="showTable(3)">
                 <label id="labelDay3" class="btn btn-outline-dark btn-outline-secondary" for="btnradio4"></label>
             
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio5" autocomplete="off" onclick="showTable(4)">
+                <input type="radio" class="btn-check" name="btnradio" id="btnradio5" onclick="showTable(4)">
                 <label id="labelDay4" class="btn btn-outline-dark btn-outline-secondary" for="btnradio5"></label>
             </div>
             <br>
             <!-- BOTTONI SELEZIONA COLONNA TABELLA -->
             <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
-                <input type="checkbox" class="btn-check" id="btncheck3" autocomplete="off" onclick="ColumnVisibility('Tperc')" checked>
+                <input type="checkbox" class="btn-check" id="btncheck3" onclick="ColumnVisibility('Tperc')" checked>
                 <label class="btn btn-outline-secondary" for="btncheck3">Tperc</label>
 
-                <input type="checkbox" class="btn-check" id="btncheck4" autocomplete="off"  onclick="ColumnVisibility('prob')" checked>
+                <input type="checkbox" class="btn-check" id="btncheck4"  onclick="ColumnVisibility('prob')" checked>
                 <label class="btn btn-outline-secondary" for="btncheck4">probabilità</label>
 
-                <input type="checkbox" class="btn-check" id="btncheck0" autocomplete="off" onclick="ColumnVisibility('umidit')" checked>
+                <input type="checkbox" class="btn-check" id="btncheck0" onclick="ColumnVisibility('umidit')" checked>
                 <label class="btn btn-outline-secondary" for="btncheck0">umidità</label>
 
-                <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off" onclick="ColumnVisibility('precipitazioni')">
+                <input type="checkbox" class="btn-check" id="btncheck1" onclick="ColumnVisibility('precipitazioni')">
                 <label class="btn btn-outline-secondary" for="btncheck1">precipitazioni</label>
             </div>
             <div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
-                <input type="checkbox" class="btn-check" id="btncheck2" autocomplete="off" onclick="ColumnVisibility('visibil')">
+                <input type="checkbox" class="btn-check" id="btncheck2" onclick="ColumnVisibility('visibil')">
                 <label class="btn btn-outline-secondary" for="btncheck2">visibilità</label>
                 
-                <input type="checkbox" class="btn-check" id="btncheck5" autocomplete="off" onclick="ColumnVisibility('vento')">
+                <input type="checkbox" class="btn-check" id="btncheck5" onclick="ColumnVisibility('vento')">
                 <label class="btn btn-outline-secondary" for="btncheck5">vento</label>
             
-                <input type="checkbox" class="btn-check" id="btncheck6" autocomplete="off" onclick="ColumnVisibility('direzione')">
+                <input type="checkbox" class="btn-check" id="btncheck6" onclick="ColumnVisibility('direzione')">
                 <label class="btn btn-outline-secondary" for="btncheck6">direzione</label>
             
-                <input type="checkbox" class="btn-check" id="btncheck7" autocomplete="off" onclick="ColumnVisibility('raffiche')">
+                <input type="checkbox" class="btn-check" id="btncheck7" onclick="ColumnVisibility('raffiche')">
                 <label class="btn btn-outline-secondary" for="btncheck7">raffiche</label>
             </div>
             <!-- SCHELETRO DELLE 5 TABELLE RESPONSIVE RIEMPITE DINAMICAMENTE CON METEO-->
